ui: contrast fixes and discord link open in new tab

--- a/apps/svelte/src/app.css
+++ b/apps/svelte/src/app.css
@@ -35,11 +35,11 @@
 	--input: oklch(0.882 0 89.876);
 	--ring: oklch(0.572 0.144 253.606);
 
-	--sidebar: oklch(0.985 0 0);
+	--sidebar: oklch(0.97 0 0);
 	--sidebar-foreground: oklch(0.145 0 0);
 	--sidebar-primary: oklch(0.205 0 0);
 	--sidebar-primary-foreground: oklch(0.985 0 0);
-	--sidebar-accent: oklch(0.97 0 0);
+	--sidebar-accent: oklch(0.90 0 0);
 	--sidebar-accent-foreground: oklch(0.205 0 0);
 	--sidebar-border: oklch(0.922 0 0);
 	--sidebar-ring: oklch(0.708 0 0);
@@ -66,7 +66,7 @@
 	--primary: oklch(0.572 0.144 253.606);
 	--primary-foreground: oklch(0.985 0 89.876);
 
-	--secondary: oklch(0.24 0 89.876);
+	--secondary: oklch(0.22 0 89.876);
 	--secondary-foreground: oklch(0.985 0 89.876);
 
 	--muted: oklch(0.205 0 89.876);
